<resources>
    <string name="app_name">ffmpeg-android</string>
    <string name="init_status_msg">Starting Up</string>
    <string name="request_permission_status_msg">"Requesting RECORD_AUDIO Permission..."</string>
    <string name="echoing_status_msg">Engine Echoing...</string>

    <string name="action_settings">Settings</string>
    <string name="cmd_start_echo">Start Echo</string>
    <string name="cmd_stop_echo">Stop Echo</string>
    <string name="cmd_get_param">FastPathInfo</string>
    <string name="fast_audio_info_msg">nativeSampleRate = %1$s\nnativeSampleBufSize = %2$s\n</string>

    <string name="player_error_msg">Failed to Create Audio Player</string>
    <string name="recorder_error_msg">Failed to Create Audio Recorder</string>
    <string name="mic_error_msg">"Audio recording is not supported"</string>
    <string name="permission_prompt_msg">"This sample needs RECORD_AUDIO permission"</string>
    <string name="permission_granted_msg">RECORD_AUDIO permission granted, touch %1$s to begin</string>
    <string name="permission_error_msg">"Permission for RECORD_AUDIO was denied"</string>
    <string name="min_delay_label_msg">delay(seconds)</string>
    <string name="init_delay_val_msg">0.1</string>

    <string name="min_decay_label_msg">decay(decimal)</string>
    <string name="init_decay_val_msg">0.1</string>

    <string name="progress_label_msg">Media Progress</string>
    <string name="init_progress_val_msg">0.1</string>
    <string name="cmd_player_open">Player Open</string>
    <string name="cmd_player_play">Player Play</string>
    <string name="cmd_player_pause">Player Pause</string>
    <string name="cmd_player_close">Player Close</string>
    <string name="url_prompt_msg">Player Url</string>
    <string name="cmd_select_file">Select file</string>
</resources>
